feat: authentication middleware for creating actor context and a route auth guard middleware
