# server/src/common/interfaces/index.ts
@@ -1,1 +1,2 @@
 export * from './repository.interface';
+export * from './actor-context.interface';
